[gd_scene load_steps=4 format=3 uid="uid://sr3v5ots23e1"]

[ext_resource type="Script" path="res://Player/menu.HUD/config/config.gd" id="1_38jfn"]
[ext_resource type="Theme" uid="uid://c4y3qsc3ijdi5" path="res://Player/menu.HUD/temas/default.tres" id="2_gkp70"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b54e5"]

[node name="ConfigControles" type="Control" node_paths=PackedStringArray("Btn_Keys", "HboxContainer", "margin_container", "label_panel")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 367.0
offset_top = 497.0
offset_right = -410.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_38jfn")
Btn_Keys = NodePath("BoxContainer/VBoxContainer/BtnKeys")
HboxContainer = NodePath("MarginContainer/HBoxContainer")
margin_container = NodePath("MarginContainer")
label_panel = NodePath("MarginContainer/HBoxContainer/Panel/Label")

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.334
anchor_top = 0.148
anchor_right = 0.673
anchor_bottom = 0.742
offset_left = 0.231964
offset_top = 0.0960007
offset_right = -0.296021
offset_bottom = 0.18396
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BoxContainer"]
layout_mode = 2
size_flags_horizontal = 6

[node name="BtnKeys" type="VBoxContainer" parent="BoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="btn_quit" type="Button" parent="BoxContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme = ExtResource("2_gkp70")
text = "Restaurar"

[node name="MarginContainer" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Panel" type="Panel" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(400, 300)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme = ExtResource("2_gkp70")

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.005
anchor_bottom = 0.69
offset_bottom = -1.52588e-05
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_b54e5")
text = "aperte um input valido..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.337
anchor_top = 0.707
anchor_right = 0.675
anchor_bottom = 0.82
offset_left = 0.199997
offset_top = -0.100006
offset_bottom = -1.52588e-05
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_gkp70")
text = "Voltar"

[connection signal="pressed" from="BoxContainer/VBoxContainer/btn_quit" to="." method="_on_btn_reset_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Panel/Button" to="." method="_on_button_pressed"]
